@@ -1,0 +1,10 @@
+.. _ref-immutabledict:
+.. module:: trytond.tools.immutabledict
+
+=============
+ImmutableDict
+=============
+
+.. class:: ImmutableDict
+
+A class that implements an immutable dictionary.
