@@ -1,3 +1,4 @@
+* Use ImmutableDict for Transaction context
 * Use UNION for 'Or'-ed domain with subqueries
 * Add remove_forbidden_chars in tools
 * Manage errors during non-interactive operations
